--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>shantokarmoker8</title>
     <link
       rel="shortcut icon"
-      href="https://ibb.co.com/YBkQwN5W"
+      href="https://i.ibb.co.com/Zz8X7fQJ/icon.png"
       type="image/x-icon"
     />
     <link
