--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       .whatsapp-button {
         display: inline-block;
         padding: 0.9rem 2.5rem;
-        background: linear-gradient(135deg, #3bf673 0%, #f1f5f9 100%);
+        background: linear-gradient(135deg, #04ec49 0%, #f1f9f4 100%);
         color: #0f172a;
         text-decoration: none;
         border-radius: 50px;
@@ -263,7 +263,7 @@
       }
       .whatsapp-button:hover {
         transform: translateY(-3px);
-        box-shadow: 0 10px 30px rgba(59, 130, 246, 0.4);
+        box-shadow: 0 10px 30px rgba(59, 246, 100, 0.4);
       }
 
       .cta-button:active {
@@ -745,7 +745,9 @@
           MySQL.
         </p>
         <a href="#contact" class="cta-button">Hire Me</a>
-        <a href="#contact" class="whatsapp-button">WhatsApp</a>
+        <a href="https://wa.me/qr/4SJQCAA2QSYUC1" class="whatsapp-button"
+          >WhatsApp</a
+        >
       </div>
     </section>
 
