--- a/index.html
+++ b/index.html
@@ -722,7 +722,9 @@
     <!-- ==================== NAVBAR ==================== -->
     <nav>
       <div class="navbar-container">
-        <div class="logo">shantokarmoker8</div>
+        <a class="logo" href="https://shantokarmoker8.vercel.app/"
+          >shantokarmoker8</a
+        >
         <ul class="nav-links" id="navLinks">
           <a href="#hero">Home</a>
           <a href="#about">About</a>
@@ -745,7 +747,10 @@
           MySQL.
         </p>
         <a href="#contact" class="cta-button">Hire Me</a>
-        <a href="https://wa.me/qr/4SJQCAA2QSYUC1" class="whatsapp-button"
+        <a
+          href="https://wa.me/qr/4SJQCAA2QSYUC1"
+          target="_blank"
+          class="whatsapp-button"
           >WhatsApp</a
         >
       </div>
