--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
           I build modern, responsive websites using HTML, CSS, JavaScript, PHP &
           MySQL.
         </p>
-        <a href="#contact" class="cta-button">Hire Me</a>
+        <a href="./others/cvPro.pdf" class="cta-button">Hire Me</a>
         <a
           href="https://wa.me/qr/4SJQCAA2QSYUC1"
           target="_blank"
